openscholar/modules/frontend/admin_panel/misc/component.css
.menu-container button {
    margin: 0;
    padding: 0;
    border: 0;
    font-family: inherit;
    font-size: 1em;
    cursor: pointer;
    text-indent: 100%;
    white-space: nowrap;
    overflow: hidden;
}
.menu-container {
    position: fixed;
    width: 125px;
    height: 100%;
    left: 0;
    top: 0;
    background-color: #000;
    transition: left, .125s, ease-in-out, .125s;
    z-index: 101;
     overflow:auto;
}
.menu-container.scroll-wide {
    
    width: 148px;
   
  
 
}
.menu-container.closed {
    left: -125px;
}
button.close-menu-button {
    width: 18px;
    height: 50px;
    background-color: #A51C30;
    position: absolute;
    top: 50%;
    left: 115px;
    border-radius: 4px;
    -moz-border-radius:  4px;
    -webkit-border-radius:  4px;
    transition-property: left, top, width, height, background-color,content;
    transition-duration: .125s, .125s, .125s, .125s, .125s,.125s;
    transition-timing-function: ease-in-out;
    transition-delay: .125s, .125s, .125s, .125s, .125s,.125s;
    z-index:3;
}

button.close-menu-button:before {
    content: url('images/close-menu-panel.png');
    left: -17px;
    position: relative;
    color: #fff;
    font-weight: bold;
    font-size: 25px;
    top: -2px;
    }

.closed button.close-menu-button:before {
    content: url('images/open-menu-panel.png');
    left: -20px;
    }

.closed button.close-menu-button {
    width: 30px;
    left: 115px;
}
button.close-menu-button:hover {
    width: 30px;
    height: 60px;
    background-color: #000;
    top: 49.5%;
    left: 110px;
}
.closed button.close-menu-button:hover {
    width: 40px;
    height: 60px;
    left: 120px;
}
.close-menu-button-oslogo {
    background: url('images/os-cp_button.png') no-repeat;
    width: 60px;
    height: 60px;
    position: absolute;
    bottom: 20px;
    left: 30px;
}
.top-close {
    z-index: 100;
    display: block;
    overflow: hidden;
    background: url('/profiles/openscholar/themes/os_basetheme/images/scholarbase-sprite.png') 0 -926px no-repeat;
    width: 20px;
    height: 20px;
    text-align: center;
    line-height: 3;
    cursor: pointer;
    position: absolute;
    top: 10px;
    right: 2px;
    font-size: 0;
}
.top-close:hover {
    color: #a50a05;
}
.menu-container ul {
    list-style: none;
    margin: 0;
    padding: 0;
}
.menu-container ul li a {
    display: block;
    padding: 12px 20px;
    color: #fff;
}
.menu-container ul li:last-child a {
    box-shadow: inset 0 1px rgba(0, 0, 0, 0.1), inset 0 -1px rgba(0, 0, 0, 0.1);
}
@media screen and (max-width: 770px) {
    .content-style-overlay {
        font-size: 75%;
    }
    .content-style-overlay .icon-close {
        top: 5px;
        right: 5px;
    }
}

